[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmotracer"
version = "0.0.1"
authors = [
  { name="Lennart Grimm" },
]
description = "A library for performing detrital cosmogenic nuclide studies."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  'numpy<2.0',
  'scipy',
  'matplotlib',
  'pandas',
  'rasterio',
  'landlab>=2.8.0',
  'utm',
  'pyLSD@git+https://github.com/lengri/pyLSD',
  'shapely',
  'geopandas',
  'h5py',
  'ujson'
]

[tool.setuptools]
# Tell setuptools where to find the 'cosmotracer' package source
# The key '.' refers to the top-level package source
package-dir = {"" = "."} # This explicitly says 'look for packages in this directory'
                         # and the current directory (where pyproject.toml is)
                         # is treated as the package root.

# Explicitly list the packages
packages = [
  "cosmotracer", 
  "cosmotracer.basin", 
  "cosmotracer.corrections",
  "cosmotracer.geometry",
  "cosmotracer.grainmove",
  "cosmotracer.statistics",
  "cosmotracer.synthetic",
  "cosmotracer.tcn",
  "cosmotracer.topo",
  "cosmotracer.utils"
]

# ruff configuration down here (maybe remove again?)
[tool.ruff]
lint.select = ["E", "F", "I", "B", "ANN"]
exclude = [
    ".git",
    "__pycache__"
]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__.py files
"__init__.py" = ["F401"]